# python-ci-sample

./: Jenkinsfile  README.md  pyproject.toml
src/app/: __init__.py  calculator.py  utils.py
src/python_ci_sample.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calculator.py  test_utils.py
