[build-system]
requires=["setuptools>=68"]
build-backend="setuptools.build_meta"

[project]
name="python-ci-sample"
version="0.1.0"
requires-python=">=3.10"
description="Sample Python repo with pytest and Jenkins"
readme="README.md"

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.packages.find]
where=["src"]
